--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,26 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.saucelabs</groupId>
+            <artifactId>sauce_junit</artifactId>
+            <version>1.0.18</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.saucelabs.selenium</groupId>
+            <artifactId>sauce-ondemand-driver</artifactId>
+            <version>2.14</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.saucelabs.selenium</groupId>
+            <artifactId>selenium-client-factory</artifactId>
+            <version>2.14</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
-    
+
 </project>
