--- a/pom.xml
+++ b/pom.xml
@@ -55,13 +55,18 @@
             <version>2.14</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.saucelabs.selenium</groupId>
-            <artifactId>selenium-client-factory</artifactId>
-            <version>2.14</version>
-            <scope>test</scope>
-        </dependency>
 
     </dependencies>
-
+    <repositories>
+        <repository>
+            <id>saucelabs-repository</id>
+            <url>https://repository-saucelabs.forge.cloudbees.com/release</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
