--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
             <version>2.14</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.saucelabs.selenium</groupId>
+            <artifactId>selenium-client-factory</artifactId>
+            <version>2.14</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
     <repositories>
